--- a/ui-service/src/main/resources/static/index.html
+++ b/ui-service/src/main/resources/static/index.html
@@ -3,36 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distributed Tic Tac Toe (WebSockets)</title>
+    <title>Tic Tac Toe - Sea Tournament</title>
 
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; flex-direction: column; align-items: center; background-color: #f8f9fa; color: #333; }
-        h1 { margin-top: 30px; color: #2c3e50; }
-        .board { display: grid; grid-template-columns: repeat(3, 100px); grid-gap: 8px; margin-top: 25px; }
-        .cell { width: 100px; height: 100px; background-color: #fff; border: 2px solid #2c3e50; display: flex; justify-content: center; align-items: center; font-size: 2.5em; font-weight: bold; border-radius: 8px; transition: background 0.3s; }
-        .cell:hover { background-color: #ecf0f1; }
-        .controls { margin-top: 25px; }
-        button { padding: 12px 24px; font-size: 1.1em; cursor: pointer; background-color: #3498db; color: white; border: none; border-radius: 6px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        button:hover { background-color: #2980b9; }
-        button:disabled { background-color: #bdc3c7; cursor: not-allowed; }
-        .status { margin-top: 20px; font-size: 1.3em; font-weight: bold; color: #2980b9; }
-        .history { margin-top: 25px; width: 320px; height: 200px; overflow-y: auto; border: 1px solid #ddd; background: #fff; padding: 15px; border-radius: 8px; box-shadow: inset 0 2px 4px rgba(0,0,0,0.05); }
-        .log-entry { border-bottom: 1px solid #eee; padding: 5px 0; font-size: 0.9em; color: #555; }
-        .log-entry:last-child { border-bottom: none; }
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0;
+            min-height: 100vh;
+
+            background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: #2c3e50;
+        }
+
+        h1 {
+            margin-top: 20px;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 10px 30px;
+            border-radius: 50px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+
+        .board {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            grid-gap: 10px;
+            margin: 20px 0;
+        }
+
+        .cell {
+            width: 100px;
+            height: 100px;
+            background: rgba(255, 255, 255, 0.9);
+            border: 2px solid #3498db;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2.5em;
+            font-weight: bold;
+            border-radius: 12px;
+            transition: transform 0.2s;
+        }
+
+        .cell:hover { transform: scale(1.02); }
+
+        .main-container {
+            display: flex;
+            gap: 20px;
+            flex-wrap: wrap;
+            justify-content: center;
+            max-width: 1000px;
+            width: 90%;
+        }
+
+        .panel {
+            background: rgba(255, 255, 255, 0.85);
+            padding: 20px;
+            border-radius: 15px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(0,0,0,0.1);
+            min-width: 280px;
+        }
+
+        .score-board {
+            display: flex;
+            justify-content: space-around;
+            background: #2c3e50;
+            color: white;
+            padding: 15px;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            font-size: 1.1em;
+        }
+
+        .score-item { text-align: center; }
+        .score-val { display: block; font-size: 1.5em; color: #3498db; }
+
+        .history-box {
+            height: 150px;
+            overflow-y: auto;
+            border: 1px solid rgba(0,0,0,0.1);
+            background: rgba(255, 255, 255, 0.5);
+            padding: 10px;
+            border-radius: 8px;
+            font-size: 0.9em;
+        }
+
+        .log-entry {
+            padding: 4px 0;
+            border-bottom: 1px solid rgba(0,0,0,0.05);
+        }
+
+        button {
+            padding: 15px 30px;
+            font-size: 1.2em;
+            cursor: pointer;
+            background-color: #2ecc71;
+            color: white;
+            border: none;
+            border-radius: 50px;
+            box-shadow: 0 4px 15px rgba(46, 204, 113, 0.4);
+            transition: all 0.3s;
+        }
+
+        button:hover { background-color: #27ae60; transform: translateY(-2px); }
+        button:disabled { background-color: #bdc3c7; box-shadow: none; transform: none; }
+
+        .status-text {
+            font-size: 1.2em;
+            font-weight: bold;
+            margin: 15px 0;
+            color: #fff;
+            text-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+        }
     </style>
 </head>
 <body>
 
-<h1>Tic Tac Toe Simulation</h1>
+<h1>Sea Tournament</h1>
 
-<div class="controls">
-    <button id="startBtn">Start New Simulation</button>
-</div>
+<div class="status-text" id="status">Ready to Start</div>
 
-<div class="status" id="status">Status: Ready</div>
+<button id="startBtn">Start New Game</button>
 
 <div class="board" id="board">
     <div class="cell" id="cell-0-0">-</div>
@@ -46,101 +146,126 @@
     <div class="cell" id="cell-2-2">-</div>
 </div>
 
-<div class="history" id="history">
-    <strong style="display: block; margin-bottom: 10px;">Live History:</strong>
+<div class="main-container">
+    <div class="panel">
+        <strong>📍 Current Game Log</strong>
+        <div id="gameLog" class="history-box" style="margin-top:10px;"></div>
+    </div>
+
+    <div class="panel">
+        <strong>🏆 Tournament Standings</strong>
+        <div class="score-board" style="margin-top:10px;">
+            <div class="score-item">X Wins <span id="xScore" class="score-val">0</span></div>
+            <div class="score-item">O Wins <span id="oScore" class="score-val">0</span></div>
+            <div class="score-item">Draws <span id="drawScore" class="score-val">0</span></div>
+        </div>
+        <div id="tournamentLog" class="history-box"></div>
+    </div>
 </div>
 
 <script>
-    let sessionId = null;
     let stompClient = null;
+    let scores = { X: 0, O: 0, draws: 0 };
 
     const startBtn = document.getElementById('startBtn');
     const statusDiv = document.getElementById('status');
-    const historyDiv = document.getElementById('history');
+    const gameLog = document.getElementById('gameLog');
+    const tournamentLog = document.getElementById('tournamentLog');
 
-
-    function connectWebSocket(id) {
+    function connectWebSocket(sessionId) {
         const socket = new SockJS('http://localhost:8082/ws-game');
         stompClient = Stomp.over(socket);
-
         stompClient.debug = null;
 
-        stompClient.connect({}, function (frame) {
-            console.log('Connected to WebSocket!');
-            statusDiv.innerText = 'Status: Connected! Watching game...';
+        stompClient.connect({}, function() {
+            statusDiv.innerText = "Watching Game...";
 
-            stompClient.subscribe('/topic/game/' + id, function (message) {
-                const gameState = JSON.parse(message.body);
+            stompClient.subscribe('/topic/game/' + sessionId, function(message) {
+                const data = JSON.parse(message.body);
+                updateUI(data);
 
-                updateBoard(gameState.board);
-
-                statusDiv.innerText = `Status: ${gameState.status}`;
-
-                const log = document.createElement('div');
-                log.className = 'log-entry';
-                log.innerText = `New move! Current status: ${gameState.status}`;
-                historyDiv.appendChild(log);
-                historyDiv.scrollTop = historyDiv.scrollHeight;
-
-                if (gameState.status !== 'IN_PROGRESS') {
-                    statusDiv.style.color = '#e74c3c';
+                if (data.lastStatus !== 'IN_PROGRESS') {
+                    processEndGame(data.lastStatus);
                     stompClient.disconnect();
                     startBtn.disabled = false;
                 }
             });
-        }, function (error) {
-            console.error('WebSocket Error:', error);
-            statusDiv.innerText = 'Error: Connection failed';
-            startBtn.disabled = false;
         });
+    }
+
+    function updateUI(data) {
+        if (data.board) {
+            for (let r = 0; r < 3; r++) {
+                for (let c = 0; c < 3; c++) {
+                    const cell = document.getElementById(`cell-${r}-${c}`);
+                    cell.innerText = data.board[r][c];
+                    cell.style.color = data.board[r][c] === 'X' ? '#e67e22' : '#9b59b6';
+                }
+            }
+        }
+
+        statusDiv.innerText = "Status: " + data.lastStatus;
+
+        if (data.moveHistory && data.moveHistory.length > 0) {
+            const lastMove = data.moveHistory[data.moveHistory.length - 1];
+
+            const moveEntry = document.createElement('div');
+            moveEntry.className = 'log-entry';
+            moveEntry.innerText = `🎮 ${lastMove}`;
+            gameLog.appendChild(moveEntry);
+
+            if (data.lastStatus !== 'IN_PROGRESS') {
+                const finalEntry = document.createElement('div');
+                finalEntry.className = 'log-entry';
+                finalEntry.innerHTML = `<b style="color: #2c3e50;">🏁 Final: ${data.lastStatus}</b>`;
+                gameLog.appendChild(finalEntry);
+            }
+
+            gameLog.scrollTop = gameLog.scrollHeight;
+        }
+    }
+
+    function processEndGame(status) {
+        let msg = "";
+        if (status === 'X_WINS') { scores.X++; msg = "❌ Player X Won!"; }
+        else if (status === 'O_WINS') { scores.O++; msg = "⭕ Player O Won!"; }
+        else if (status === 'DRAW') { scores.draws++; msg = "🤝 Draw!"; }
+
+        document.getElementById('xScore').innerText = scores.X;
+        document.getElementById('oScore').innerText = scores.O;
+        document.getElementById('drawScore').innerText = scores.draws;
+
+        const winEntry = document.createElement('div');
+        winEntry.className = 'log-entry';
+        winEntry.innerHTML = `<strong>${msg}</strong>`;
+        tournamentLog.prepend(winEntry);
     }
 
     startBtn.addEventListener('click', async () => {
         startBtn.disabled = true;
-        statusDiv.innerText = 'Status: Initializing...';
-        statusDiv.style.color = '#2980b9';
+        gameLog.innerHTML = "";
         clearBoard();
 
-        historyDiv.innerHTML = '<strong style="display: block; margin-bottom: 10px;">Live History:</strong>';
-
         try {
-            const sessionRes = await fetch('/api/sessions', { method: 'POST' });
-            const session = await sessionRes.json();
-            sessionId = session.sessionId;
+            const res = await fetch('/api/sessions', { method: 'POST' });
+            const session = await res.json();
 
-            connectWebSocket(sessionId);
+            connectWebSocket(session.sessionId);
 
-            setTimeout(async () => {
-                await fetch(`/api/sessions/${sessionId}/simulate`, { method: 'POST' });
+            setTimeout(() => {
+                fetch(`/api/sessions/${session.sessionId}/simulate`, { method: 'POST' });
             }, 500);
-
-        } catch (err) {
-            console.error('Initial error:', err);
-            statusDiv.innerText = 'Error: ' + err.message;
+        } catch (e) {
+            statusDiv.innerText = "Error starting session";
             startBtn.disabled = false;
         }
     });
 
-    function updateBoard(board) {
-        for (let r = 0; r < 3; r++) {
-            for (let c = 0; c < 3; c++) {
-                const cell = document.getElementById(`cell-${r}-${c}`);
-                cell.innerText = board[r][c];
-                if (board[r][c] === 'X') cell.style.color = '#e67e22';
-                if (board[r][c] === 'O') cell.style.color = '#9b59b6';
-                if (board[r][c] === '-') cell.style.color = '#ccc';
-            }
-        }
-    }
-
     function clearBoard() {
-        for (let r = 0; r < 3; r++) {
-            for (let c = 0; c < 3; c++) {
-                const cell = document.getElementById(`cell-${r}-${c}`);
-                cell.innerText = '-';
-                cell.style.color = '#ccc';
-            }
-        }
+        document.querySelectorAll('.cell').forEach(c => {
+            c.innerText = '-';
+            c.style.color = '#ccc';
+        });
     }
 </script>
 </body>
